Stan fixes to sorrupt AOD.ipynb file

--- a/AOD_orig_corrupt.ipynb
+++ b/AOD_orig_corrupt.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+
+=======
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -249,31 +251,37 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
+
     }
    ],
    "source": [
-    "#This is the primary Ccding module for the project \\\"The Annals of Dagobah\\\" by the group The Data Swamp Sages of Dagobah.\\n\",\n",
-    "   \n",
+    "#This is the primary Ccding module for the project \"The Annals of Dagobah\" by the group The Data Swamp Sages of Dagobah.\n",
+    "#\n",
+    "#\n",
     "%matplotlib inline\n",
-    "   \n",
-    "# Dependencies and Setup\\\n",
+    "\n",
+    "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    " \n",
-    "# File to Load (Remember to change these)\\n\",\n",
+    "\n",
+    "# File to Load (Remember to change these)\n",
     "path_StarWars = \"C:/Users/SS3/Desktop/GTBC/Project_1/Dagobah/Resources/StarWars.csv\"\n",
-    "    \n",
+    "\n",
+    "\n",
+    "# Read the City and Ride Data\n",
     "df_StarWars = pd.read_csv(path_StarWars, encoding='iso8859_2')\n",
-    "    \n",
+    "\n",
     "df_StarWars_Yes = df_StarWars.loc[(df_StarWars['SW_Fan']=='Yes')]\n",
     "print(len(df_StarWars_Yes['Seen_SW']))\n",
     "df_StarWars_Yes.head()\n",
-    "    \n",
-    "#edit edity eidtnesss"
+
+
+    "\n",
+    "#edit edity eidtnesss\n"
    ]
   },
   {
